# youtube-gemini-processor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/youtube_gemini_processor/: __init__.py  cli.py
tests/: test_cli.py  test_coverage_boost.py
