[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-gemini-processor"
version = "0.2.0"
description = "Universal CLI tool to process YouTube videos using Google's Gemini API - extracts transcripts and visual content descriptions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexander Sivura" }
]
keywords = [
    "youtube",
    "gemini",
    "transcript",
    "video-analysis",
    "ai",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-genai>=1.5.0",
    "click>=8.1.0",
]

[project.scripts]
yt-process = "youtube_gemini_processor.cli:main"
youtube-gemini-process = "youtube_gemini_processor.cli:main"

[project.urls]
Homepage = "https://github.com/alexandersivura/youtube-gemini-processor"
Repository = "https://github.com/alexandersivura/youtube-gemini-processor"
Issues = "https://github.com/alexandersivura/youtube-gemini-processor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_gemini_processor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = ["pytest>=9.0", "pytest-cov", "ruff>=0.8", "mypy>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["youtube_gemini_processor"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__",
    "pragma: no cover",
]


[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "SIM", "RET", "PTH", "RUF"]
ignore = ["E501", "S310", "S603", "S607", "RET504"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
